--- a/.github/workflows/generate-grids.yml
+++ b/.github/workflows/generate-grids.yml
@@ -2,14 +2,14 @@ name: Generate Daily Grids
 
 on:
   schedule:
-  
     - cron: '0 8 * * *'
   workflow_dispatch:
-  
 
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v3
@@ -21,6 +21,18 @@ jobs:
 
       - name: Install Dependencies
         run: npm install
+
+      - name: Get AWS RDS IP
+        id: aws_ip
+        run: echo "AWS_IP_ADDRESS=$(nslookup ${{ secrets.DB_HOST }} | awk '/^Address: / { print $2 }')" >> $GITHUB_ENV
+
+      - name: Add Runner IP to AWS Security Group
+        run: |
+          aws ec2 authorize-security-group-ingress \
+            --group-id ${{ secrets.AWS_SECURITY_GROUP_ID }} \
+            --protocol tcp \
+            --port 5432 \
+            --cidr ${{ env.RUNNER_IP_ADDRESS }}/32
 
       - name: Generate the Grid Files
         run: node generateGrid.js
@@ -38,3 +50,12 @@ jobs:
           git add 'todays_grid_*.json'
           git commit -m "Automated: Generate daily grids" || echo "No changes to commit"
           git push
+
+      - name: Remove Runner IP from AWS Security Group
+        if: always()
+        run: |
+          aws ec2 revoke-security-group-ingress \
+            --group-id ${{ secrets.AWS_SECURITY_GROUP_ID }} \
+            --protocol tcp \
+            --port 5432 \
+            --cidr ${{ env.RUNNER_IP_ADDRESS }}/32
