--- a/.github/workflows/generate-grids.yml
+++ b/.github/workflows/generate-grids.yml
@@ -22,6 +22,9 @@ jobs:
 
       - name: Install Dependencies
         run: npm install
+        
+      - name: Debug DB_SSL Secret
+        run: echo "The value of the DB_SSL secret is [${{ secrets.DB_SSL }}]"
 
       - name: Generate the Grid Files
         run: node generateGrid.js
