--- a/.github/workflows/download-grids.yml
+++ b/.github/workflows/download-grids.yml
@@ -23,11 +23,11 @@ jobs:
       - name: Download Grid Files from DB
         run: node downloadGrids.mjs
         env:
-          AWS_DB_HOST: ${{ secrets.AWS_DB_HOST }}
-          AWS_DB_USER: ${{ secrets.AWS_DB_USER }}
-          AWS_DB_PASSWORD: ${{ secrets.AWS_DB_PASSWORD }}
-          AWS_DB_DATABASE: ${{ secrets.AWS_DB_DATABASE }}
-          AWS_DB_PORT: ${{ secrets.AWS_DB_PORT }}
+          AWS_DB_HOST: ${{ secrets.DB_HOST }}
+          AWS_DB_USER: ${{ secrets.DB_USER }}
+          AWS_DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
+          AWS_DB_DATABASE: ${{ secrets.DB_DATABASE }}
+          AWS_DB_PORT: ${{ secrets.DB_PORT }}
 
       - name: Commit and Push Changes
         run: |
